--- a/bahasa.html
+++ b/bahasa.html
@@ -41,8 +41,9 @@
   <!-- SECTION 1 END-->
 
   <!-- SECTION 2 -->
-  <section style="background-color: #D9EEE1; width: 100%; min-height: 610px;">
-    <div class="container">
+  <section style=" background-color: #fff4a3; width: 100%; min-height: 610px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0D47A1" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
+    <div class="container" style=" width: 100%; min-height: 610px;">
       <div class="row">
         <div class="col-md-6">
           <h1 class="nama-bahasa">HTML</h1><br>
@@ -64,10 +65,12 @@
       </div>
     </div>
   </section>
-  <!-- SECTION 2 END-->
 
+  <!-- SECTION 2 END-->
+  
   <!-- SECTION 3 -->
-  <section style="background-color: #FFF4A3; width: 100%; min-height: 610px;">
+  <section style="background-color: #f394ba; width: 100%; min-height: 610px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff4a3" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -97,6 +100,7 @@
 
   <!-- SECTION 4 -->
   <section style="background-color: #B5DAFF; width: 100%; min-height: 610px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f394ba" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -123,7 +127,8 @@
   <!-- SECTION 4 END -->
 
   <!-- SECTION 5 -->
-  <section style="background-color: #E5C6D6; width: 100%; min-height: 610px;">
+  <section style="background-color: #d4fea3; width: 100%; min-height: 610px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#B5DAFF" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -147,7 +152,8 @@
   <!-- SECTION 5 END -->
 
   <!-- SECTION 6 -->
-  <section style="background-color: #96d4d4; width: 100%; min-height: 610px;">
+  <section style="background-color: #d49696; width: 100%; min-height: 610px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d4fea3" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -172,12 +178,13 @@
   <!-- SECTION 6 END -->
 
   <!-- SECTION 7 -->
-  <section style="background-color: #000; width: 100%; min-height: 610px;">
+  <section style="background-color: #a1a1a1; width: 100%; min-height: 610px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#d49696" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <h1 class="learn">Quizzes</h1>
-          <p style="color: #fff4a3;; text-align: center;">Tes skillmu disini !</p>
+          <p style="color: #fff4a3;; text-align: center; font-family: 'Mukta', sans-serif;">Tes skillmu disini !</p>
           <div style="display: flex; justify-content: center; align-items: center;">
             <a href="quiz.html" class="quiz-button">Quizzes</a>
           </div>
@@ -189,7 +196,14 @@
   <!-- SECTION 7 END-->
 
   <!-- footer -->
+  <section style="background-color: #0D47A1;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      <path fill="#a1a1a1" fill-opacity="1" d="M0,192L26.7,170.7C53.3,149,107,107,160,74.7C213.3,43,267,21,320,37.3C373.3,53,427,107,480,128C533.3,149,587,139,640,133.3C693.3,128,747,128,800,
+      154.7C853.3,181,907,235,960,240C1013.3,245,1067,203,1120,186.7C1173.3,171,1227,181,1280,170.7C1333.3,160,1387,128,1413,112L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,
+      1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path>
+    </svg>
   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
+    
     <div class="container-fluid">
       <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
         <div class="col-md-4">
@@ -225,6 +239,7 @@
       </div>
     </div>
   </footer>
+</section>
   <!-- footer end -->
   <script src="script.js"></script>
 </body>
