--- a/prestasi.html
+++ b/prestasi.html
@@ -156,7 +156,7 @@
               </div>
               <div class="col" style="padding: 20px;">
                 <h3>Pilmapres Tingkat Nasional 2023</h3>
-                <p class="desc-p">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).</p>
+                <p class="desc-p" style="font-family: 'Mukta', sans-serif;">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).</p>
               </div>
             </div>
 
@@ -169,7 +169,7 @@
               </div>
               <div class="col" style="padding: 20px;">
                 <h3>Pilmapres Tingkat Nasional 2023</h3>
-                <p class="desc-p">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).
+                <p class="desc-p" style="font-family: 'Mukta', sans-serif;">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).
                 </p>
               </div>
             </div>
@@ -185,7 +185,7 @@
               </div>
               <div class="col" style="padding: 20px;">
                 <h3>Pilmapres Tingkat Nasional 2023</h3>
-                <p class="desc-p">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).</p>
+                <p class="desc-p" style="font-family: 'Mukta', sans-serif;">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).</p>
               </div>
             </div>
 
@@ -209,7 +209,7 @@
               </div>
               <div class="col" style="padding: 20px; ">
                 <h3>Pilmapres Tingkat Nasional 2023</h3>
-                <p class="desc-p">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).
+                <p class="desc-p" style="font-family: 'Mukta', sans-serif;">Mahasiswa asal Universitas Muhammadiyah Jember (Unmuh Jember), Jauhari Ahmad Febriansyah  berhasil meraih peringkat ke-4 dalam ajang Pilmapres Wilayah Program Diploma LLDikti7 yang diadakan di Grand Whizz Hotel, Trawas, Mojokerto pada Senin sampai Rabu (8/5/2023 – 10/5/2023).
                 </p>
               </div>
             </div>
@@ -250,7 +250,7 @@
               </div>
               <div class="col" style="padding: 20px;">
                 <h3>Forda Jatim E-Sport</h3>
-                <p class="desc-p2">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.</p>
+                <p class="desc-p2" style="font-family: 'Mukta', sans-serif;">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.</p>
               </div>
             </div>
         
@@ -263,7 +263,7 @@
               </div>
               <div class="col" style="padding: 20px;">
                 <h3>Forda Jatim E-Sport</h3>
-                <p class="desc-p2">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.
+                <p class="desc-p2" style="font-family: 'Mukta', sans-serif;">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.
                 </p>
               </div>
             </div>
@@ -279,7 +279,7 @@
               </div>
               <div class="col" style="padding: 20px;">
                 <h3>Forda Jatim E-Sport</h3>
-                <p class="desc-p2">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.</p>
+                <p class="desc-p2" style="font-family: 'Mukta', sans-serif;">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.</p>
               </div>
             </div>
         
@@ -303,7 +303,7 @@
               </div>
               <div class="col" style="padding: 20px; ">
                 <h3>Forda Jatim E-Sport</h3>
-                <p class="desc-p2">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.
+                <p class="desc-p2" style="font-family: 'Mukta', sans-serif;">Firman Adhimah S.J, seorang mahasiswa Program Studi Manajemen Universitas Muhammadiyah Jember (Unmuh Jember), yang merupakan salah satu anggota dari tim Esport Kabupaten Jember berhasil meraih medali emas dalam Kejuaraan FORDA JATIM cabang olahraga Esport PUBG Mobile yang diadakan pada Selasa (30/5/2023) di lantai 2 Malang Creative Center.
                 </p>
               </div>
             </div>
