--- a/profil.html
+++ b/profil.html
@@ -123,7 +123,7 @@
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc" style="color: #f8f8f8;">Dalam program studi teknik informatika Universitas Muhammadiyah Jember, 
+            <p class="desc" style="color: #f8f8f8; font-family: 'Mukta', sans-serif;">Dalam program studi teknik informatika Universitas Muhammadiyah Jember, 
               Anda akan mengalami pendidikan yang tidak hanya berfokus pada ilmu pengetahuan, tetapi juga menerapkan nilai-nilai
               keislaman guna membentuk karakter yang religius, profesional, dan kompetitif. Kami menyediakan fasilitas belajar
               yang mendukung dan lingkungan yang kondusif untuk mengembangkan potensi Anda.
@@ -163,7 +163,7 @@
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc">Assalamu’alaikum wr. wb. Selamat datang di website Program Studi Teknik Informatika
+            <p class="desc" style="font-family: 'Mukta', sans-serif;">Assalamu’alaikum wr. wb. Selamat datang di website Program Studi Teknik Informatika
               Universitas Muhammadiyah Jember.
               Kami berharap website ini dapat memberikan berbagai informasi seputar program Program Studi Teknik
               Informatika Universitas Muhammadiyah Jember yang dibutuhkan masyarakat. Program Studi Teknik Informatika
@@ -207,14 +207,14 @@
           <div class="col-md-6"
             style="display: flex; justify-content: flex-start; align-items: center; flex-direction: column; padding: 30px">
             <h3>Misi</h3>
-            <q class="desc">Menjadi program studi unggul di bidang komputasi cerdas yang berdaya saing di Indonesia
+            <q class="desc" style="font-family: 'Mukta', sans-serif;">Menjadi program studi unggul di bidang komputasi cerdas yang berdaya saing di Indonesia
               bernafaskan nilai-nilai
               keislaman pada tahun 2030</q>
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px 45px;">
             <h3>Visi</h3>
-            <ol class="desc">
+            <ol class="desc" style="font-family: 'Mukta', sans-serif;">
               <li>Menyelenggarakan pendidikan dan pengajaran bidang komputasi cerdas</li>
               <li>Menyelenggarakan penelitian dan pengabdian masyarakat bidang komputasi.</li>
               <li>Menyelenggarakan kerjasama di tingkat regional, nasional, dan internasional.</li>
@@ -250,9 +250,9 @@
         <div class="row aos">
           <div class="col-md-12"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 30px;text-align:center">
-            <p>Akreditasi Program Studi Teknik Informatika adalah B sesuai dengan no SK Ban PT
+            <p style="font-family: 'Mukta', sans-serif;">Akreditasi Program Studi Teknik Informatika adalah B sesuai dengan no SK Ban PT
               2429/SK/BAN-PT/Akred/S/IX/2018</p>
-            <p> dokumen SK dan Sertifikat Akreditasi (Berlaku untuk tahun lululsan 2012 ke atas)</p>
+            <p style="font-family: 'Mukta', sans-serif;"> dokumen SK dan Sertifikat Akreditasi (Berlaku untuk tahun lululsan 2012 ke atas)</p>
             <div style="text-align: center; margin-top: 20px;">
               <button class="cta">
                 <span>Lihat dokumen</span>
